#5896: fixed. Aligned time picker with time field in admin interface.

--- a/app/stylesheets/application/devcms_core_admin.sass
+++ b/app/stylesheets/application/devcms_core_admin.sass
@@ -457,3 +457,6 @@ input.small
   
 .x-menu
   width: 200px !important
+  
+.x-combo-list
+  left: 391px !important
